# tt-lang

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_SYSTEM.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FA_IMPLEMENTATION_README.md  FINAL_SESSION_SUMMARY.md  FINDINGS_SUMMARY.md  FLASH_ATTENTION_RESULTS.md  LICENSE  MATMUL_FUSION_ISSUE.md  MULTI_TILE_STRATEGY.md  NOTICE  PATH_TO_PRODUCTION_FA.md  QUICK_REFERENCE.md  README.md  REDUCTION_OPS_IMPLEMENTATION.md  SECURITY.md  SESSION_COMPLETE_SUMMARY.md  SESSION_NOTES.md  SESSION_SUMMARY.md  TODAYS_SESSION_SUMMARY.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  runtime_test_harness.sh  setup_simulator.sh  system_desc.ttsys  test_7ops.py  test_debug_multiblock_dma.py  test_double_matmul.py  test_fa_complete.py
.github/: CI_WORKFLOWS.md  CODEOWNERS  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/containers/: CONTAINER_README.md  Dockerfile  Dockerfile.base  Dockerfile.dist  Dockerfile.local  README.md  activate-install.sh  build-and-install.sh  build-docker-images.sh  build-docker-local.sh  cleanup-toolchain.sh  (+4 more)
claude-slash-commands/: install.sh  ttl-export.md  ttl-help.md  ttl-import.md  ttl-optimize.md  ttl-profile.md  ttl-simulate.md  ttl-test.md
docs/: BUILD_SYSTEM.md  CB_API_UNDEFINED_BEHAVIOR.md  DistributedTensorType.md  HITCHHIKERS_GUIDE.md  LOWERING_MULTITILE.md  README.md  TT-Lang.md  TT-lang.md  TTL_Dialect_Plan.md  TTSIM_VM_SETUP.md
docs/sphinx/: CMakeLists.txt  build.md  conf.py  contributor-guide.md  getting-started.md  guidelines.md  index.rst  overview.md  testing.md  tools.md
docs/sphinx/_templates/: layout.html
docs/sphinx/specs/: TTLangSpecification.md  TTLangSpecification_v0.1.md  ttl-spec.md
docs/sphinx/ttl-tutorial/: circular-buffers.md  index.md  kernel-basics.md
env/: activate  activate.fish  activate.in
examples/: FLASH_ATTENTION_FINAL_STATUS.md  FLASH_ATTENTION_STATUS.md  README.md  block_broadcast_mcast.py  broadcast.py  broadcast_demo.py  copy_lock_error.py  custom_dm_matmul.py  demo_2x2_tiles.py  demo_6plus_ops.py  demo_one.py  eltwise_add.py  eltwise_add_error.py  eltwise_mcast.py  eltwise_pipe.py  eltwise_pipe_core3.py  flash_attention.py  flash_attention_benchmarks.py  flash_attention_correct.py  flash_attention_correct_pipelined.py  flash_attention_ideal.py  flash_attention_pipelined.py  flash_attention_two_kernel.py  flash_attention_with_loops.py  flash_attention_working.py  general_broadcast.py  metal_matmul.py  metal_singlecore_matmul.py  multicore_matmul.py  multistep_op.py  simple_bcast.py  simple_bcast_2x2.py  singlecore_matmul.py  test_5ops.py  test_accessor_creation.py  test_block_sizes.py  test_both_reductions.py  test_double_matmul.py  test_exp.py  test_exp_direct.py  (+23 more)
include/: CMakeLists.txt
include/ttlang/: Config.h.in  Transforms.h
include/ttlang-c/: Dialects.h  TTLAttrs.h
include/ttlang/Bindings/Python/: TTLangModule.h
include/ttlang/Dialect/: CMakeLists.txt
include/ttlang/Dialect/D2M/: CMakeLists.txt  Passes.h  Passes.td
include/ttlang/Dialect/TTKernel/: CMakeLists.txt  Passes.h  Passes.td
include/ttlang/Dialect/TTKernel/Transforms/: TTKernelCleanupPatterns.h
include/ttlang/Dialect/TTL/: CMakeLists.txt  Passes.h  Passes.td  TTLElementwiseOps.def  TTLToTTKernelOps.def
include/ttlang/Dialect/TTL/IR/: CMakeLists.txt  TTL.h  TTLBase.td  TTLOps.h  TTLOps.td  TTLOpsAttrs.h  TTLOpsAttrs.td  TTLOpsEnums.h  TTLOpsEnums.td  TTLOpsTypes.h  TTLOpsTypes.td  TTLOpsUtils.h
include/ttlang/Dialect/TTL/Pipelines/: CMakeLists.txt  TTLPipelines.h
include/ttlang/Dialect/TTL/Transforms/: BufferizableOpInterfaceImpl.h
include/ttlang/Dialect/TTMetal/Pipelines/: TTMetalPipelines.h
include/ttlang/Dialect/Utils/: ConversionUtils.h  LayoutUtils.h  ShapeUtils.h  ValueUseUtils.h
include/ttlang/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
python/: CMakeLists.txt  TTLModule.cpp  TTLangModule.cpp  gen_elementwise.py  pyproject.toml  setup.py
python/pykernel/: __init__.py
python/pykernel/_src/: __init__.py  base_ast.py  kernel_ast.py  kernel_types.py  utils.py
python/sim/: __init__.py  api.py  block.py  cb.py  cbapi.py  cbstate.py  circular_buffer.py  constants.py  copy.py  copyhandlers.py  decorators.py  dma.py  dmahandlers.py  greenlet_scheduler.py  idxtype.py  index_type.py  kernel.py  math.py  pipe.py  program.py  pykernel_env.py  ringview.py  tensoraccessor.py  testing.py  torch_utils.py  ttlang_sim.py  ttlsim.py  ttnnsim.py  typedefs.py  xformyield.py
python/sim/cbsim/: __init__.py  api.py  cbstate.py  constants.py  errors.py  index_type.py  ringview.py  stream.py  typedefs.py
python/ttl/: __init__.py  circular_buffer.py  config.py.in  dtype_utils.py  ir.py  kernel_runner.py  layouts.py  operators.py  pipe.py  ttl.py  ttl_api.py  ttl_math.py  ttl_utils.py
python/ttl/_mlir_libs/: __init__.py
python/ttl/_src/: __init__.py  auto_profile.py  ttl_ast.py
python/ttl/dialects/: TTLEnumBinding.td  __init__.py  ttl.py
python/ttlang/: __init__.py  circular_buffer.py  codegen.py  constants.py  d2m_api.py  diagnostics.py  dtype_utils.py  layouts.py  operators.py  semaphore.py  templates.py  ttl.py  ttl_api.py
python/ttlang/_mlir_libs/: __init__.py  _site_initialize_1.py
python/ttlang/_src/: auto_profile.py  codegen.py  d2m_ast.py  stream.py  tensor_accessor.py  tensor_registry.py  ttl_ast.py  utils.py
python/ttlang/dialects/: TTLBinding.td  _ods_common.py  ttl.py
python/ttlang/utils/: __init__.py  block_allocation.py  correctness.py
python/utils/: __init__.py  block_allocation.py  correctness.py
scripts/: sync-tt-mlir.sh
src/: cbsim.py
test/: CMakeLists.txt  TESTING.md  __init__.py  lit.cfg.py  lit.site.cfg.py.in  pytest.ini  run_pytest.sh  ttlang_test_utils.py
tests/: test_cbsim.py
tools/: CMakeLists.txt  build-toolchain.sh
tools/ttlang-opt/: CMakeLists.txt  ttlang-opt.cpp
tools/ttlang-translate/: CMakeLists.txt  ttlang-translate.cpp
(+674 files in other folders)
