[build-system]
requires = ["setuptools>=61.0", "cmake", "nanobind", "wheel", "pip", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "ttlang"
description = "Python Bindings and Package for TT-Lang Compiler Project"
requires-python = ">=3.8"
keywords = ["mlir", "tt-lang", "tt-mlir", "tenstorrent", "compiler"]
license = "Apache-2.0"
license-files = ["../LICENSE*"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# We will dynamically provide `version` and `dependencies` in setup.py
dynamic = ["version", "dependencies", "readme"]

[project.urls]
Homepage = "https://github.com/tenstorrent/tt-lang"
Repository = "https://github.com/tenstorrent/tt-lang"
Issues = "https://github.com/tenstorrent/tt-lang/issues"

[tool.cibuildwheel]
build = "cp311-manylinux_x86_64*"
skip = "*-musllinux_*"
build-verbosity = 2

